Fixing tweet dates to not include the 'about'. Also cleaning up code and tightening spacing on the name header text.

--- a/media/styles/global.css
+++ b/media/styles/global.css
@@ -150,6 +150,9 @@ body {
     font-family: "Lucida Grande", Helvetica, sans-serif;
 }
 
+.name-header-text {
+  line-height: 54px;
+}
 .header {
     float: left;
     width: 260px;
